src/RPGGrammar.g4
grammar RPGGrammar;

program : rpg EOF;

rpg: EOF | criarrpg;

criarrpg: FUNCAO INICIO  ((declaracao|METODOS) PONTO_E_VIRGULA)* FIM;

declaracao: ((DECLARAR ID)|ID) ATRIBUIR (STRING|METODOS|INT);

FUNCAO: 'quest';
INICIO: 'criarRPG()'WS*'{';
DECLARAR: 'slot'; 
PONTO_E_VIRGULA: ';';
ATRIBUIR: '=';
METODOS: (METODO_COMBATE|METODO_CURAR|METODO_FUGIR|METODO_ESPECIAL);
METODO_COMBATE: 'lutar' WS* '('PARAMETROS_COMBATE')';
METODO_CURAR: 'curar' WS* '('PARAMETROS_CURAR')';
METODO_FUGIR: 'fugir' WS* '('PARAMETROS_FUGIR')';
METODO_ESPECIAL: 'especial' WS* '('PARAMETROS_ESPECIAL')';
PARAMETROS_COMBATE: WS*(ID|STRING)WS*','WS*(ID|INT)WS*','WS*(ID|STRING)WS*','WS*(ID|INT)WS*','WS*(ID|STRING)WS*','WS*(ID|STRING)WS*','WS*(ID|INT)WS*;
PARAMETROS_CURAR: WS*(ID|STRING)WS*','WS*(ID|INT)WS*','WS*(ID|INT)WS*;
PARAMETROS_FUGIR: WS*(ID|STRING)WS*','WS*(ID|INT)WS*;
PARAMETROS_ESPECIAL: WS*(ID|STRING)WS*','WS*(ID|INT)WS*','WS*(ID|STRING)WS*;
FIM: '}';
ESPACO: [ \t\r\n]+ -> skip;

INT : [0-9]+ ;
ID: [a-zA-Z_][a-zA-Z_0-9]* ;
STRING: '"'([a-z]|[A-Z]|[0-9 ])*'"';
WS: [ \t\n\r\f]+ -> skip ;
